--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "d3-interpolate": "^3.0.1",
     "d3-interpolate-path": "^2.3.0",
     "d3-scale": "^4.0.2",
-    "expo": "~52.0.38",
+    "expo": "~52.0.42",
     "expo-blur": "14.0.3",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-dotenv": "^3.4.11",
