--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "expo-font": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
