--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-scale": "^4.0.2",
     "expo": "~52.0.46",
     "expo-blur": "14.0.3",
+    "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -29,6 +30,7 @@
     "react-native": "^0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.6.0",
+    "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-orientation-locker": "^1.7.0",
@@ -40,8 +42,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "recharts": "^2.15.1",
-    "expo-font": "~13.0.4"
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
